--- a/cppcache/integration/test/CMakeLists.txt
+++ b/cppcache/integration/test/CMakeLists.txt
@@ -50,6 +50,7 @@ add_executable(cpp-integration-test
   PdxInstanceFactoryTest.cpp
   CacheWriterTest.cpp
   TransactionsTest.cpp
+  DisconnectEndPointAtException.cpp
 )
 
 target_compile_definitions(cpp-integration-test
