--- a/.github/workflows/macos-latest.yml
+++ b/.github/workflows/macos-latest.yml
@@ -89,3 +89,32 @@ jobs:
       run: cmake --build build/ --target cpp-integration-test -- -j4
     - name: new integration tests
       run: cd build/cppcache/integration/test/ && ctest -E BasicIPv6Test -j2
+
+  acceptance-test:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: cache geode
+      uses: actions/cache@v2
+      id: cache-geode-1120-mac
+      with:
+        path: ~/apache-geode
+        key: apache-geode-1120-mac
+    - name: install geode
+      env:
+        CACHE_HIT: ${{steps.cache-geode-1120-mac.outputs.cache-hit}}
+        GEODE_VERSION: 1.12.0
+      run: |
+        if [[ "$CACHE_HIT" != 'true' ]]; then
+          wget "https://www.apache.org/dyn/closer.cgi?action=download&filename=geode/${GEODE_VERSION}/apache-geode-${GEODE_VERSION}.tgz" --quiet -O - | tar xzf - && mv apache-geode-${GEODE_VERSION} ~/apache-geode
+        fi
+    - name: install doxygen
+      run: brew install doxygen
+    - name: mkdir build
+      run: mkdir build
+    - name: cmake configure
+      run: export GEODE_HOME=~/apache-geode && cmake -Bbuild -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl
+    - name: cmake build
+      run: cmake --build build/ --target cpp-acceptance-test -- -j4
+    - name: new integration tests
+      run: cd build/cppcache/acceptance-test/ && ctest -j1
