--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -164,7 +164,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-2016, windows-latest]
+        os: [windows-2016]
     steps:
     - uses: actions/checkout@v2
     - name: cache geode
