Windows acceptance won't work until WSL2 add to github worker
Authored-by: M. Oleske <michael@oleske.engineer>

--- a/.github/workflows/things-that-do-not-work.yml
+++ b/.github/workflows/things-that-do-not-work.yml
@@ -230,7 +230,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest]
+        os: [windows-2016, windows-latest]
     steps:
     - uses: actions/checkout@v2
     - name: cache geode
