--- a/.github/workflows/things-that-do-not-work.yml
+++ b/.github/workflows/things-that-do-not-work.yml
@@ -55,7 +55,7 @@ jobs:
     - name: mkdir build
       run: mkdir build
     - name: cmake configure
-      run: export GEODE_HOME=~/apache-geode && cmake -Bbuild -DWITH_IPV6=ON -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl
+      run: export GEODE_HOME=~/apache-geode && cmake -Bbuild -DWITH_IPV6=ON -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl\@1.1/
     - name: cmake build
       run: cmake --build build/ --target cpp-integration-test -- -j4
     - name: BasicIPv6Test
