--- a/.github/workflows/things-that-do-not-work.yml
+++ b/.github/workflows/things-that-do-not-work.yml
@@ -226,7 +226,7 @@ jobs:
         cd C:\build\cppcache\integration\test\
         ctest -R BasicIPv6Test -j1
 
-  acceptance-test:
+  acceptance-test-windows:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -281,3 +281,56 @@ jobs:
       run: |
         cd C:\build\cppcache\acceptance-test\
         ctest -j1
+
+  acceptance-test-mac:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: cache geode
+        uses: actions/cache@v2
+        id: cache-geode-1120-mac
+        with:
+          path: ~/apache-geode
+          key: apache-geode-1120-mac
+      - name: install geode
+        env:
+          CACHE_HIT: ${{steps.cache-geode-1120-mac.outputs.cache-hit}}
+          GEODE_VERSION: 1.12.0
+        run: |
+          if [[ "$CACHE_HIT" != 'true' ]]; then
+            wget "https://www.apache.org/dyn/closer.cgi?action=download&filename=geode/${GEODE_VERSION}/apache-geode-${GEODE_VERSION}.tgz" --quiet -O - | tar xzf - && mv apache-geode-${GEODE_VERSION} ~/apache-geode
+          fi
+      - name: install doxygen
+        run: brew install doxygen
+      - name: Install docker
+        run: |
+          # https://github.com/actions/virtual-environments/issues/1143#issuecomment-652264388
+          brew cask install docker
+          # allow the app to run without confirmation
+          xattr -d -r com.apple.quarantine /Applications/Docker.app
+
+          # preemptively do docker.app's setup to avoid any gui prompts
+          sudo /bin/cp /Applications/Docker.app/Contents/Library/LaunchServices/com.docker.vmnetd /Library/PrivilegedHelperTools
+          sudo /bin/cp /Applications/Docker.app/Contents/Resources/com.docker.vmnetd.plist /Library/LaunchDaemons/
+          sudo /bin/chmod 544 /Library/PrivilegedHelperTools/com.docker.vmnetd
+          sudo /bin/chmod 644 /Library/LaunchDaemons/com.docker.vmnetd.plist
+          sudo /bin/launchctl load /Library/LaunchDaemons/com.docker.vmnetd.plist
+          open -g -a Docker.app
+
+          # Wait for the server to start up, if applicable.
+          i=0
+          while ! docker system info &>/dev/null; do
+            (( i++ == 0 )) && printf %s '-- Waiting for Docker to finish starting up...' || printf '.'
+            sleep 1
+          done
+          (( i )) && printf '\n'
+
+          echo "-- Docker is ready."
+      - name: mkdir build
+        run: mkdir build
+      - name: cmake configure
+        run: export GEODE_HOME=~/apache-geode && cmake -Bbuild -DOPENSSL_ROOT_DIR=/usr/local/opt/openssl\@1.1/
+      - name: cmake build
+        run: cmake --build build/ --target cpp-acceptance-test -- -j4
+      - name: acceptance tests
+        run: cd build/cppcache/acceptance-test/ && ctest -j1
