ubuntu 20.04 and clang compile to both clang format jobs
Authored-by: M. Oleske <michael@oleske.engineer>

--- a/.github/workflows/things-that-do-not-work.yml
+++ b/.github/workflows/things-that-do-not-work.yml
@@ -31,6 +31,8 @@ jobs:
       run: export GEODE_HOME=~/apache-geode && cmake -Bbuild
     - name: cmake all-clangformat
       run: cmake --build build/ --target all-clangformat && git diff --exit-code
+    - name: clang compile all
+      run: cmake --build build/ -- -j2
 
   build-and-test-ipv6-macos-latest:
     runs-on: macos-latest
