--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -66,12 +66,14 @@ jobs:
       run: export GEODE_HOME=~/apache-geode && cmake -Bbuild
     - name: cmake all-clangformat
       run: cmake --build build/ --target all-clangformat && git diff --exit-code
+    - name: clang compile all
+      run: cmake --build build/ -- -j2
 
   build-and-unit-test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-16.04, ubuntu-latest]
+        os: [ubuntu-16.04, ubuntu-latest, ubuntu-20.04]
     steps:
     - uses: actions/checkout@v2
     - name: cache geode
@@ -103,7 +105,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-16.04, ubuntu-latest]
+        os: [ubuntu-16.04, ubuntu-latest, ubuntu-20.04]
     steps:
     - uses: actions/checkout@v2
     - name: cache geode
@@ -135,7 +137,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-16.04, ubuntu-latest]
+        os: [ubuntu-16.04, ubuntu-latest, ubuntu-20.04]
     steps:
     - uses: actions/checkout@v2
     - name: cache geode
@@ -167,7 +169,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-16.04, ubuntu-latest]
+        os: [ubuntu-16.04, ubuntu-latest, ubuntu-20.04]
     steps:
     - uses: actions/checkout@v2
     - name: cache geode
@@ -199,7 +201,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-16.04, ubuntu-latest]
+        os: [ubuntu-16.04, ubuntu-latest, ubuntu-20.04]
     steps:
     - uses: actions/checkout@v2
     - name: cache geode
