--- a/.github/workflows/things-that-do-not-work.yml
+++ b/.github/workflows/things-that-do-not-work.yml
@@ -28,7 +28,7 @@ jobs:
     - name: mkdir build
       run: mkdir build
     - name: use clang 10
-      run: sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-10.0 999 && sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-10.0 999 && sudo update-alternatives --install /usr/bin/cc cc /usr/bin/clang-10.0 999 && sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++-10.0 999 && sudo update-alternatives --install /usr/bin/clang-format clang-format /usr/bin/clang-format-10.0 999
+      run: sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-10 999 && sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-10 999 && sudo update-alternatives --install /usr/bin/cc cc /usr/bin/clang-10 999 && sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++-10 999 && sudo update-alternatives --install /usr/bin/clang-format clang-format /usr/bin/clang-format-10 999
     - name: cmake configure
       run: export GEODE_HOME=~/apache-geode && cmake -Bbuild
     - name: cmake all-clangformat
@@ -308,28 +308,12 @@ jobs:
         run: brew install doxygen
       - name: Install docker
         run: |
-          # https://github.com/actions/virtual-environments/issues/1143#issuecomment-652264388
-          brew cask install docker
-          # allow the app to run without confirmation
-          xattr -d -r com.apple.quarantine /Applications/Docker.app
-
-          # preemptively do docker.app's setup to avoid any gui prompts
-          sudo /bin/cp /Applications/Docker.app/Contents/Library/LaunchServices/com.docker.vmnetd /Library/PrivilegedHelperTools
-          sudo /bin/cp /Applications/Docker.app/Contents/Resources/com.docker.vmnetd.plist /Library/LaunchDaemons/
-          sudo /bin/chmod 544 /Library/PrivilegedHelperTools/com.docker.vmnetd
-          sudo /bin/chmod 644 /Library/LaunchDaemons/com.docker.vmnetd.plist
-          sudo /bin/launchctl load /Library/LaunchDaemons/com.docker.vmnetd.plist
-          open -g -a Docker.app
-
-          # Wait for the server to start up, if applicable.
-          i=0
-          while ! docker system info &>/dev/null; do
-            (( i++ == 0 )) && printf %s '-- Waiting for Docker to finish starting up...' || printf '.'
-            sleep 1
-          done
-          (( i )) && printf '\n'
-
-          echo "-- Docker is ready."
+          mkdir -p ~/.docker/machine/cache
+          curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
+          brew install docker docker-machine
+          docker-machine create --driver virtualbox default
+          docker-machine env default
+          eval "$(docker-machine env default)"
       - name: mkdir build
         run: mkdir build
       - name: cmake configure
