--- a/.github/workflows/things-that-do-not-work.yml
+++ b/.github/workflows/things-that-do-not-work.yml
@@ -33,8 +33,39 @@ jobs:
       run: export GEODE_HOME=~/apache-geode && cmake -Bbuild
     - name: cmake all-clangformat
       run: cmake --build build/ --target all-clangformat && git diff --exit-code
+
+  clangcompile-and-run-unit-test:
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: cache geode
+      uses: actions/cache@v2
+      id: cache-geode-1120
+      with:
+        path: ~/apache-geode
+        key: apache-geode-1120
+      env:
+        GEODE_VERSION: 1.12.0
+    - name: install geode
+      env:
+        CACHE_HIT: ${{steps.cache-geode-1120.outputs.cache-hit}}
+        GEODE_VERSION: 1.12.0
+      run: |
+        if [[ "$CACHE_HIT" != 'true' ]]; then
+          wget "https://www.apache.org/dyn/closer.cgi?action=download&filename=geode/${GEODE_VERSION}/apache-geode-${GEODE_VERSION}.tgz" --quiet -O - | tar xzf - && mv apache-geode-${GEODE_VERSION} ~/apache-geode
+        fi
+    - name: install doxygen
+      run: sudo apt-get update && sudo apt-get install -yq doxygen
+    - name: mkdir build
+      run: mkdir build
+    - name: use clang 10
+      run: sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-10 999 && sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-10 999 && sudo update-alternatives --install /usr/bin/cc cc /usr/bin/clang-10 999 && sudo update-alternatives --install /usr/bin/c++ c++ /usr/bin/clang++-10 999 && sudo update-alternatives --install /usr/bin/clang-format clang-format /usr/bin/clang-format-10 999
+    - name: cmake configure
+      run: export GEODE_HOME=~/apache-geode && cmake -Bbuild
     - name: clang compile all
       run: cmake --build build/ -- -j2
+    - name: unit tests
+      run: build/cppcache/test/apache-geode_unittests
 
   build-and-test-ipv6-macos-latest:
     runs-on: macos-latest
@@ -308,12 +339,40 @@ jobs:
         run: brew install doxygen
       - name: Install docker
         run: |
-          mkdir -p ~/.docker/machine/cache
-          curl -Lo ~/.docker/machine/cache/boot2docker.iso https://github.com/boot2docker/boot2docker/releases/download/v19.03.12/boot2docker.iso
-          brew install docker docker-machine
-          docker-machine create --driver virtualbox default
-          docker-machine env default
-          eval "$(docker-machine env default)"
+          # https://github.com/actions/virtual-environments/issues/1143#issuecomment-652264388
+          # refs:
+          # https://github.com/MicrosoftDocs/vsts-docs/issues/3784
+          # https://forums.docker.com/t/docker-for-mac-unattended-installation/27112
+
+          brew cask install docker --no-quarantine
+          # allow the app to run without confirmation
+          xattr -d -r com.apple.quarantine /Applications/Docker.app
+
+          # preemptively do docker.app's setup to avoid any gui prompts
+          sudo /bin/cp /Applications/Docker.app/Contents/Library/LaunchServices/com.docker.vmnetd /Library/PrivilegedHelperTools
+          sudo /bin/cp /Applications/Docker.app/Contents/Resources/com.docker.vmnetd.plist /Library/LaunchDaemons/
+          sudo /bin/chmod 544 /Library/PrivilegedHelperTools/com.docker.vmnetd
+          sudo /bin/chmod 644 /Library/LaunchDaemons/com.docker.vmnetd.plist
+          sudo /bin/launchctl load /Library/LaunchDaemons/com.docker.vmnetd.plist
+
+          # refs:
+          # https://stackoverflow.com/a/35979292/425458
+
+          [[ $(uname) == 'Darwin' ]] || { echo "This function only runs on macOS." >&2; exit 2; }
+
+          echo "-- Starting Docker.app, if necessary..."
+
+          open -g -a Docker.app || exit
+
+          # Wait for the server to start up, if applicable.
+          i=0
+          while ! docker system info &>/dev/null; do
+            (( i++ == 0 )) && printf %s '-- Waiting for Docker to finish starting up...' || printf '.'
+            sleep 1
+          done
+          (( i )) && printf '\n'
+
+          echo "-- Docker is ready."
       - name: mkdir build
         run: mkdir build
       - name: cmake configure
